<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menuChat"
        android:icon="@drawable/ic_chat_white"
        android:title="@string/chat"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menuPeople"
        android:icon="@drawable/ic_people_white"
        android:title="@string/people"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menuGroup"
        android:icon="@drawable/ic_group_white"
        android:title="@string/group"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menuSetting"
        android:icon="@drawable/ic_setting_white"
        android:title="@string/setting"
        app:showAsAction="ifRoom|withText" />
</menu>