<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/user_profile"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgBack"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:padding="@dimen/_12sdp"
                app:srcCompat="@drawable/ic_back_white" />
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardProfileImage"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_24sdp"
        app:cardCornerRadius="@dimen/_120sdp"
        app:cardForegroundColor="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_user" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDisplayName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:gravity="center"
        android:textColor="@color/dark"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardProfileImage"
        tools:text="Full Name" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardChat"
        android:layout_width="@dimen/_56sdp"
        android:layout_height="@dimen/_56sdp"
        app:cardCornerRadius="@dimen/_56sdp"
        app:cardForegroundColor="@color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/cardCall"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginTop="@dimen/_56sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplayName"
        app:strokeColor="@color/dark"
        app:strokeWidth="@dimen/_1sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_chat_white"
            app:tint="@color/dark"
            android:padding="@dimen/_16sdp"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardCall"
        android:layout_width="@dimen/_56sdp"
        android:layout_height="@dimen/_56sdp"
        app:cardCornerRadius="@dimen/_56sdp"
        app:cardForegroundColor="@color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/cardChat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardChat"
        app:layout_constraintTop_toTopOf="@+id/cardChat"
        app:strokeColor="@color/dark"
        app:strokeWidth="@dimen/_1sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_call_white"
            app:tint="@color/dark"
            android:padding="@dimen/_16sdp"/>
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/cardChat"
        app:layout_constraintEnd_toEndOf="@+id/cardChat"
        app:layout_constraintTop_toBottomOf="@+id/cardChat"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/dark"
        android:text="@string/chat"
        android:layout_marginTop="@dimen/_8sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/cardCall"
        app:layout_constraintEnd_toEndOf="@+id/cardCall"
        app:layout_constraintTop_toBottomOf="@+id/cardCall"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/dark"
        android:text="@string/call"
        android:layout_marginTop="@dimen/_8sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>